alterações nos arquivos e melhorias